Trying to fix layout shift on login page

--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -1562,9 +1562,10 @@
   }
 
   .cf-turnstile {
+    contain: strict;
     display: flex;
+    height: 65px;
     justify-content: center;
-    min-height: 65px;
     width: 100%;
   }
 
